--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -3,17 +3,29 @@
 
 /*=== VARIABLES ===*/
 $clear: rgba(0,0,0,0);
+$transBlack: rgba(0,0,0,0.5);
 
 /*=== MIXINS ===*/
 
 
 /*=== GENERAL ===*/
+a, button, input {
+  outline:none!important;
+}
 #content {
   opacity:0;
   animation:fadeIn .5s linear .5s 1 forwards;
   -webkit-animation:fadeIn .5s linear .5s 1 forwards;
   -moz-animation:fadeIn .5s linear .5s 1 forwards;
   -o-animation:fadeIn .5s linear .5s 1 forwards;
+}
+.overlay {
+  background:$transBlack;
+  opacity:0;
+  transition:all .5s;
+  &:hover {
+    opacity:1;
+  }
 }
 
 /*=== HEADER ===*/
